<?xml version="1.0" encoding="UTF-8"?>
<!--
 Copyright 2021 Google LLC

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>com.google.abm-edge</groupId>
    <artifactId>abm-edge-usecase</artifactId>
    <version>0.1.0-SNAPSHOT</version>
  </parent>
  <artifactId>payments</artifactId>
  <name>payments</name>
  <description>Application to process payments for the Edge Use case workload
  </description>
  <properties>
    <java.version>11</java.version>
    <spring.boot.mainclass>com.google.abmedge.payments.PaymentsApplication</spring.boot.mainclass>
  </properties>
  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-log4j2</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
    </dependency>
    <dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-java</artifactId>
    </dependency>
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
    </dependency>
    <dependency>
      <groupId>com.google.abm-edge</groupId>
      <artifactId>service-sdk</artifactId>
    </dependency>
    <dependency>
      <groupId>com.google.abm-edge</groupId>
      <artifactId>inventory</artifactId>
      <version>0.1.0-SNAPSHOT</version>
      <scope>compile</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <!--Jib is a Maven plugin for building Docker and OCI images for your Java applications.-->
        <groupId>com.google.cloud.tools</groupId>
        <artifactId>jib-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <!--The Spring Boot Maven Plugin provides Spring Boot support in Apache Maven.
            It allows you to package executable jar or war archives, run Spring Boot applications,
            generate build information and start your Spring Boot application prior to running integration tests.-->
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <version>${spring-boot-maven.plugin.version}</version>
        <configuration>
          <addResources>true</addResources>
        </configuration>
      </plugin>
      <plugin>
        <!--The Checkstyle Plugin generates a report regarding the code style used by the developers.-->
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
      </plugin>
      <plugin>
        <!--The Surefire Plugin is used during the test phase of the build lifecycle to execute the unit tests of an application.-->
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
      </plugin>
      <plugin>
        <!--JaCoCo-Maven plugin is used to provide code coverage (i.e: tests covering code) reporting-->
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>
</project>
